<resources>
    <string name="app_name">SomosMasApp</string>
    <string name="signup">Registrarme</string>
    <string name="logosomosmasapp">logosomosmasapp</string>
    <string name="signup_signin">Ya tienes cuenta? Ingresa!</string>
    <string name="name">Nombre y apellido</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="passwordconfirm">Repite la contraseña</string>
    <string name="signup_dialog_error">Error no se pudo realizar el registro</string>
    <string name="signup_dialog_message">Usuario registrado exitosamente</string>
    <string name="ok_btn_placeholder_text">OK</string>
    <string name="contactate">¡Contactate con nosotros!</string>
    <string name="constribuir">¿Quieres contribuir?</string>
    <string name="donar">Donar</string>
    <string name="enviarMje">Enviar Mensaje</string>
    <string name="email_2">Email</string>
    <string name="mje">Mensaje</string>
    <string name="loginOk">Login OK</string>
    <string name="loginError">Error, con estos datos no se puede iniciar sesión</string>
    <string name="preference_file_key">com.example.somosmasapp</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Contacto</string>
    <string name="title_notifications">Novedades</string>
    <string name="hola_bienve">Hola! Bienvenidx</string>
    <string name="texto_somos_más">
        Desde 1997 en Somos Más trabajamos con los chicos y chicas, mamás y papás, abuelos y vecinos del barrio La Cava generando procesos de crecimiento y de inserción social. Uniendo las manos de todas las familias, las que viven en el barrio y las que viven fuera de él, es que podemos pensar, crear y garantizar estos procesos. Somos una asociación civil sin fines de lucro que se creó en 1997 con la intención de dar alimento a las familias del barrio. Con el tiempo fuimos involucrándonos con la comunidad y agrandando y mejorando nuestra capacidad de trabajo. Hoy somos un centro comunitario que acompaña a más de 700 personas a través de las áreas de: Educación, deportes, primera infancia, salud, alimentación y trabajo social.
    </string>
    <string name="todo">TODO</string>
    <string name="contact_dialog_message">Solicitud de contacto enviada!</string>

</resources>